--- a/test_final.ipynb
+++ b/test_final.ipynb
@@ -9945,11 +9945,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save_model(final_arima, \"Model_Predic_Pm 2.5_Final\") # บันทึกโมเดลที่ปรับแต่งแล้ว"
+    "save_model(final_arima, \"Model_Predic_Pm 2.5_Final\") # บันทึกโมเดลที่ปรับแต่งแล้ว"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_forecast.to_csv(\"model.csv\") #บันทึกไฟล์ที่มีข้อมูล X_featurer(ข้อมูลตัวแปรภายนอก)"
    ]
   }
  ],
